--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,11 @@
         </dependency>
 
         <!-- JDBC Driver for SQL Server -->
-        <dependency>
-            <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>mssql-jdbc</artifactId>
-            <version>9.2.1.jre8</version> <!-- Use the latest version available -->
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.microsoft.sqlserver</groupId>-->
+<!--            <artifactId>mssql-jdbc</artifactId>-->
+<!--            <version>9.2.1.jre8</version> &lt;!&ndash; Use the latest version available &ndash;&gt;-->
+<!--        </dependency>-->
 
         <!-- Quartz Scheduler for scheduling tasks -->
         <dependency>
@@ -103,6 +103,18 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.72</version>
+        </dependency>
+<!--&lt;!&ndash;        &lt;!&ndash; Spring Boot Starter Data JPA &ndash;&gt;&ndash;&gt;我已经有mybitsplus-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-data-jpa</artifactId>-->
+<!--        </dependency>-->
+
+        <!-- Oracle JDBC Driver -->
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
     </dependencies>
