--- a/pom.xml
+++ b/pom.xml
@@ -89,11 +89,11 @@
             <artifactId>hutool-http</artifactId>
             <version>5.7.11</version> <!-- 确保使用的是最新版本 -->
         </dependency>
-        <dependency>
-            <groupId>com.example</groupId>
-            <artifactId>my-library</artifactId>
-            <version>1.0.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.example</groupId>-->
+<!--            <artifactId>my-library</artifactId>-->
+<!--            <version>1.0.0</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
