--- a/src/main/resources/application-uat.yml
+++ b/src/main/resources/application-uat.yml
@@ -12,7 +12,7 @@ spring:
 #    jpa:
 #      open-in-view: false
 
-    url: jdbc:oracle:thin:@//36.138.132.30:1521/dbms
+    url: jdbc:oracle:thin:@//36.138.132.30:1521/dbms?currentSchema=FERP
 #    url: jdbc:oracle:thin:@//db.00.forestpacking.com:1522/dbms
     username: read
     password: ejsh.read
@@ -30,6 +30,7 @@ spring:
         logic-not-delete-value: 0
     configuration:
       map-underscore-to-camel-case: true
+      log-impl: org.apache.ibatis.logging.stdout.StdOutLoggingImpl
 #  jpa:
 #    hibernate:
 #      ddl-auto: update #  意思我在项目中加了一个字段，数据库会自动增加一个相应的字段
@@ -37,6 +38,8 @@ logging:
   level:
     root: info # 从环境取
     com.test.demo: info
+    org.apache.ibatis: debug # 设置MyBatis相关的日志级别为debug，以便打印SQL语句
+    com.baomidou.mybatis-plus: debug # 设置MyBatis-Plus相关的日志级别为debug，以便打印SQL语句
   file:
     name: logs/demo-server.log
   logback:
@@ -47,9 +50,12 @@ logging:
 
 kingdee:
 
+#  acctId: 66f52f3013f11b
+#  username: Administrator
+#  password: KINGDEE@123
+
   acctId: 66bc19b17df4ca
   username: Administrator
   password: slbz.2024
-
   lcid: 2052
   serverurl: http://localhost//k3cloud/
