--- a/src/main/resources/application-uat.yml
+++ b/src/main/resources/application-uat.yml
@@ -3,17 +3,23 @@ server:
 
 spring:
   datasource:
-#                         sqlsever的配置
-#    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
-#    url: jdbc:sqlserver://127.0.0.1:1433;DatabaseName=AIS20231109104652
-#    username: sa
-#    password: Aa1216390501
-#
-#    jpa:
-#      open-in-view: false
-
+#    primary:
+#      url: jdbc:oracle:thin:@//36.138.132.30:1521/dbms?currentSchema=FERP
+#      username: read
+#      password: ejsh.read
+#      driver-class-name: oracle.jdbc.OracleDriver
+#      hikari:
+#        minimum-idle: 5
+#        maximum-pool-size: 15
+#    secondary:
+#      url: jdbc:oracle:thin:@//36.134.103.106:1521/dbms?currentSchema=FERP
+#      username: read
+#      password: ejsh.read
+#      driver-class-name: oracle.jdbc.OracleDriver
+#      hikari:
+#        minimum-idle: 5
+#        maximum-pool-size: 15
     url: jdbc:oracle:thin:@//36.138.132.30:1521/dbms?currentSchema=FERP
-#    url: jdbc:oracle:thin:@//db.00.forestpacking.com:1522/dbms
     username: read
     password: ejsh.read
     driver-class-name: oracle.jdbc.OracleDriver
