数据库与星空web对接项目1211

--- a/src/main/resources/application-uat.yml
+++ b/src/main/resources/application-uat.yml
@@ -64,4 +64,5 @@ kingdee:
   username: Administrator
   password: slbz.2024
   lcid: 2052
-  serverurl: http://localhost//k3cloud/
+  serverurl: http://k3.forestpacking.com/k3cloud/
+#  serverurl: http://localhost//k3cloud/
